# Rossbot-AI-trader

./: .env.example  .gitignore  CLAUDE.md  Changelog.md  DO NOT TOUCH.md  PROGRESS.md  README.md  ROSSBOT_PROJECT_PLAN.md  ROSSBOT_STRATEGY_SPEC.md  RUNBOOK.md  alembic.ini  dev_start_api.bat  dev_start_dashboard.bat  docker-compose.yml  pyproject.toml  requirements.txt  setup_dev.bat  start.bat  start.sh
.github/workflows/: ci.yml
adapters/: __init__.py  alpaca.py  alpaca_broker.py  analyzer.py  base.py  databento.py  edgar.py  llm_providers.py  providers.py  stubs.py
adapters/catalyst/: __init__.py  benzinga_feed.py  keyword_filter.py  llm_classifier.py  models.py  provider.py  sec_filing.py
adapters/l2/: __init__.py  depth_book.py  detectors.py  models.py  provider.py  tape_window.py
adapters/market_state/: __init__.py  attention.py  classifier.py  features.py  models.py  provider.py
api/: __init__.py  auth.py  main.py
api/routers/: controls.py  dashboard.py  health.py  news.py  operator.py  performance.py
api/schemas/: dashboard.py  performance.py
api/services/: alert_service.py  health_service.py  state_service.py  ws_manager.py
core/: __init__.py  clock.py  config.py  indicators.py  logging.py  money.py  redis.py  timeutils.py
core/backtest/: __init__.py  fill_model.py  metrics.py  models.py  paper_session.py  replay.py  sim_gate.py
core/compliance/: __init__.py  pdt.py  ssr.py  startup_gate.py  wash_sale.py
core/continuation/: __init__.py  engine.py  models.py
core/data/: __init__.py  bars.py  feed_integrity.py
core/demo/: __init__.py  config.py  engine.py  state.py  universe.py  wiring.py
core/execution/: __init__.py  backstop.py  bailout.py  latency.py
core/halt/: __init__.py  engine.py  models.py
core/live/: __init__.py  capital_ramp.py  models.py  readiness.py  reconcile.py  session.py
core/news/: __init__.py  catalyst_classifier.py  catalyst_verifier.py  news_stream.py
core/risk/: __init__.py  manager.py  models.py  monitors.py  pre_trade.py  sizing.py
core/scanner/: __init__.py  float_resolver.py  models.py  rvol.py  scanner.py  subscanners.py
core/strategy/: __init__.py  conviction.py  engine.py  entry_gate.py  exit_engine.py  models.py  patterns.py
dashboard/: README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AccountPanel.tsx  ActivityTimeline.tsx  Badge.tsx  BotControls.tsx  (+20 more)
db/: __init__.py  base.py  config_loader.py  config_seed.py  models.py  supabase_setup.sql  types.py
docs/: CLAUDE.md  DEMO_README.md  PROGRESS.md  ROSSBOT_STRATEGY_SPEC.md  UNDERSTANDING_ROSSBOT.md
scripts/: check_redis.py  fixture_replay.py  run_bot.py  run_migrations.py
tests/: conftest.py  test_adapters_abstract.py  test_alert_service.py  test_attention_scorer.py  test_backtest_fill_model.py  test_backtest_replay.py  test_backtest_sim_gate.py  test_bailout.py  test_bars.py  test_capital_ramp.py  test_catalyst_classifier.py  test_catalyst_keyword.py  test_catalyst_llm.py  test_catalyst_provider.py  test_catalyst_sec_filing.py  test_catastrophic_backstop.py  test_clock.py  test_compliance.py  test_config.py  test_config_loader.py  test_continuation_engine.py  test_conviction.py  test_dashboard_api.py  test_edgar.py  test_entry_gate.py  test_exit_engine.py  test_feed_integrity.py  test_float_resolver.py  test_halt_engine.py  test_health_service.py  test_indicators.py  test_l2_accumulators.py  test_l2_detectors.py  test_l2_provider.py  test_latency_recorder.py  test_ledger_no_float.py  test_live_adapter.py  test_live_session.py  test_market_state_classifier.py  test_market_state_features.py  (+19 more)
(+20 files in other folders)
